--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -158,7 +158,11 @@
 
 /* New Hero Styles */
 .hero-v2-card {
-    @apply relative overflow-hidden bg-gradient-to-tr from-amber-50 via-white to-cyan-50 py-8 text-center dark:from-amber-900/20 dark:to-cyan-900/20 sm:py-16;
+    @apply relative overflow-hidden bg-gray-900 py-8 text-center sm:py-16;
+}
+
+.hero-v2-card .hero-v2-title, .hero-v2-card .hero-v2-desc {
+    @apply text-white;
 }
 
 .hero-v2-content {
