--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -123,10 +123,10 @@
 /* Shiny Button Styles */
 @keyframes shiny-button-sheen {
   0% {
-    transform: translate(-100%, -100%) rotate(45deg);
+    transform: translate(-150%, -150%) rotate(45deg);
   }
   100% {
-    transform: translate(100%, 100%) rotate(45deg);
+    transform: translate(150%, 150%) rotate(45deg);
   }
 }
 
@@ -140,20 +140,25 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 150%;
-  height: 200%;
+  width: 100%;
+  height: 250%;
   background: linear-gradient(
     45deg,
     transparent,
     rgba(255, 255, 255, 0.3),
     transparent
   );
-  transform: translate(-100%, -100%) rotate(45deg);
-  transition: transform 0.3s ease-in-out;
+  transform: translate(-150%, -150%) rotate(45deg);
+  transition: transform 0.5s ease-in-out;
 }
 
 .shiny-button:hover::before {
-  animation: shiny-button-sheen 1s 1;
+  animation: shiny-button-sheen 1.2s 1;
+}
+
+/* Playful Nav Link */
+.nav-link:hover .nav-link-indicator {
+    transform: scaleX(1);
 }
 
 /* New Hero Styles */
